nir is in process...

--- a/nir/research/00-packages.tex
+++ b/nir/research/00-packages.tex
@@ -1,6 +1,7 @@
 \usepackage{threeparttable}
 \usepackage{makecell}
 
+\usepackage{tabularx}
 %\usepackage{cmap} % Улучшенный поиск русских слов в полученном pdf-файле
 %\usepackage[T2A]{fontenc} % Поддержка русских букв
 %\usepackage[utf8]{inputenc} % Кодировка utf8
