--- a/nir/research/04-analysis.tex
+++ b/nir/research/04-analysis.tex
@@ -1,3 +1,10 @@
+\chapter{Введение}
+
+Данный НИР посвящен предметной области человеко-машинной взаимодействия (ЧМВ), а именно роботам- и программам-собеседникам (далее --- диалоговым системам, ДС). В данной области считается~\cite{Ronzhin-Karpov-Li}, что повышению эффективности ЧМВ способствует использование наиболее естественных для человека средств коммуникации. Здесь наблюдается, с одной стороны, перенос людьми своих ожиданий с межличностной коммуникации на ЧМВ и, с другой стороны, использование мультимодальной коммуникации, в том числе аффективной. Функциональность ДС бывает ... ~\cite{Волкова Л.Л. О функциональности диалоговых систем... ?Лингвистика и Лингводидактика в неязыковом вузе...}. Ограничение данной работы --- это применимость в рамках развлекательной, образовательной и социальной функциональности ДС.
+
+В данной НИР будет проведен обзор существующих подходов к описанию персональных черт (ПОПЧ), а также обзор существующих решений (ДС), в которых применены различные ПОПЧ. 
+
+
 \chapter{Аффективная робототехника}
 
 Развитие роботизированных технологий влечёт за собой неизбежное возникновение вопросов, связанных с взаимодействием человека и робота, а также с восприятием робота как полноценного участника этого взаимодействия.
