--- a/nir/research/06-implementation.tex
+++ b/nir/research/06-implementation.tex
@@ -1,24 +1,80 @@
 \chapter{Подходы к описанию персональных черт}
 
+Способ описания личности человека путём выделения некоторого набора черт занимает особое место в психологии личности, поскольку позволяет систематически характеризовать индивидуальные различия между людьми. 
+
+\textbf{Черта личности (персональная черта)} --- это устойчивая предрасположенность человека реагировать, думать и чувствовать определённым образом, то есть проявлять характерные типы поведения, эмоций и мыслей в разных ситуациях \cite{PervinJohn2001Personality}.
+
+\section{Личностные черты по Г.Оллпорту}
+
+Г. Оллпорт разделил персональные черты человека на три уровня \cite{PervinJohn2001Personality}:
+
+\begin{itemize}
+	\item \textbf{кардинальные} --- представляют собой доминирующие диспозиции, которые пронизывают всю жизнь человека и проявляются практически во всех его действиях. Они определяют общий стиль поведения личности и становятся её ведущей характеристикой;
+	
+	\item \textbf{центральные} --- основные характеристики, описывающие поведение человека в повседневной жизни. К ним относятся такие качества, как честность, доброта, общительность, настойчивость. Эти черты формируют основу личности и определяют привычные способы взаимодействия с окружающими;
+	
+	\item \textbf{вторичные} --- являются менее устойчивыми и проявляются в ограниченных ситуациях. Они отражают индивидуальные предпочтения, привычки и вкусы, которые могут меняться в зависимости от обстоятельств.
+\end{itemize}
+
+Предложенная Оллпортом классификация позволяет рассматривать личность как систему иерархически организованных черт, различающихся по степени выраженности и влияния на поведение.
+
+\clearpage
+
+\section{Трехфакторная теория Ганса Ю. Айзенка}
+
+В результате дважды проведенного факторного анализа Aйзенк выделил 3 базовых параметра личности, каждый  имеющий под собой биологическую основу: 
+
+\begin{itemize}
+	\item экстраверсия-интроверсия;
+	
+	\item невротизм;
+	
+	\item психотизм.
+\end{itemize}
+
+ Айзенк также разработал множество вопросников для измерения личности по этим параметрам: Личностный список модели, Личностный список Айзенка, Личностный вопросник Айзенка \cite{PervinJohn2001Personality}.
+
+\section{Подход Раймонда Б. Кэттела}
+
+В рамках своей теории он предложил две классификации личностных черт. Согласно первой, черты делятся на \cite{PervinJohn2001Personality}:
+ 
+\begin{itemize}
+	\item \textbf{черты способностей} --- характеризуют индивидуальные навыки и умения, обеспечивающие эффективность деятельности. Примером такой черты является интеллект;
+	
+	\item \textbf{черты темперамента} --- отражают эмоциональные особенности и стиль поведения человека — скорость реакции, уровень эмоциональной возбудимости, склонность к импульсивности или рассудительности;
+	
+	\item \textbf{динамические черты} --- описывают мотивационную сферу личности, то есть направленность и силу стремлений, а также значимые для человека цели.
+\end{itemize}
+
+Согласно второй, черты подразделяются на \cite{PervinJohn2001Personality}: 
+
+\begin{itemize}
+	\item \textbf{поверхностные черты} --- наблюдаемые особенности поведения, которые внешне кажутся взаимосвязанными, но не обязательно имеют общую причину. Они выявляются субъективными методами, например опросами и самооценками;
+	
+	\item \textbf{черты темперамента} --- представляют собой фундаментальные структуры личности, стоящие за наблюдаемыми проявлениями. Они выявляются с помощью факторного анализа и отражают реальные взаимосвязи между различными аспектами поведения. Именно глубинные черты, по Кэттеллу, образуют основу личности и служат её «строительными блоками».
+\end{itemize}
+
+Основное внимание исследователь уделял разработке опросников, в частности знаменитого теста 16PF, однако стремился продемонстрировать, что те же факторы выявляются и при использовании оценок внешних наблюдателей, и объективных методик.
+
 \section{Большая пятерка}
 
-\textbf{Большая пятерка} -- это таксономия черт личности; она отображает, какие черты из тех, что люди пользуются для описания друг друга, группируются под одним общим знаменателем \cite{big_five_traits}. 
+\textbf{Большая пятерка} --- эмпирически выведенный (в результате процедуры факторного анализа) набор относительно независимых черт человека\cite{big_five_traits}. 
 
 Термин <<Большая пятерка>> был введен  Л. Голдбергом в своей работе 1981 года \cite{goldberg1981language} как название для выделенных 5 черт личности:
 
 \begin{itemize}
-	\item \textbf{экстраверсия} -- показывает, насколько человек любит общение, полон энергии и положительных эмоций. Экстраверты активны, общительны, любят внимание и выражение своей позиции; слишком высокий уровень может проявляться навязчивостью. Низкие показатели отражают интроверсию -- спокойствие, самостоятельность, низкую потребность во внешней стимуляции; крайние значения могут указывать на трудности в социальных контактах \cite{big_five_traits};
+	\item \textbf{экстраверсия} --- показывает, насколько человек любит общение, полон энергии и положительных эмоций. Экстраверты активны, общительны, любят внимание и выражение своей позиции; слишком высокий уровень может проявляться навязчивостью. Низкие показатели отражают интроверсию -- спокойствие, самостоятельность, низкую потребность во внешней стимуляции; крайние значения могут указывать на трудности в социальных контактах \cite{big_five_traits};
 	
-	\item \textbf{доброжелательность} -- отражает просоциальную направленность личности. Люди с высокими показателями мягкие, терпимые, ориентированы на интересы группы, но при чрезмерной выраженности рискуют потерять индивидуальность. Низкие показатели характеризуют эгоцентричных, холодных и критичных людей, сосредоточенных на личной выгоде, однако способных к объективным решениям. \cite{radyuk2016bigfive};
+	\item \textbf{доброжелательность} --- отражает просоциальную направленность личности. Люди с высокими показателями мягкие, терпимые, ориентированы на интересы группы, но при чрезмерной выраженности рискуют потерять индивидуальность. Низкие показатели характеризуют эгоцентричных, холодных и критичных людей, сосредоточенных на личной выгоде, однако способных к объективным решениям. \cite{radyuk2016bigfive};
 	
-	\item \textbf{добросовестность} -- показывает, насколько добросовестно человек выполняет свои обязанности, его целеустремленность, организованность, мотивированность. Высокие оценки по шкале являют надежную, пунктуальную, самодисциплинированную, педантичную личность. Низкие оценки - ленивую, беспечную, слабовольную, нецелеустремленную \cite{big_five_traits};
+	\item \textbf{добросовестность} --- показывает, насколько добросовестно человек выполняет свои обязанности, его целеустремленность, организованность, мотивированность. Высокие оценки по шкале являют надежную, пунктуальную, самодисциплинированную, педантичную личность. Низкие оценки - ленивую, беспечную, слабовольную, нецелеустремленную \cite{big_five_traits};
 	
-	\item \textbf{нейротизм} -- склонность испытывать негативные эмоции. Шкала отражает уровень эмоциональной стабильности личности. Высокие показатели указывают на повышенную реактивность и тревожность, тогда как низкие — на спокойное отношение к жизненным ситуациям \cite{big_five_traits};
+	\item \textbf{нейротизм} --- склонность испытывать негативные эмоции. Шкала отражает уровень эмоциональной стабильности личности. Высокие показатели указывают на повышенную реактивность и тревожность, тогда как низкие — на спокойное отношение к жизненным ситуациям \cite{big_five_traits};
 	
-	\item \textbf{открытость опыту} -- отражает интерес человека к новому — идеям, людям, местам. Высокие показатели связаны с творчеством, развитым воображением и тягой к новизне, низкие -- с консерватизмом, исполнительностью и предпочтением привычного. \cite{big_five_traits}.
+	\item \textbf{открытость опыту} --- отражает интерес человека к новому — идеям, людям, местам. Высокие показатели связаны с творчеством, развитым воображением и тягой к новизне, низкие --- с консерватизмом, исполнительностью и предпочтением привычного. \cite{big_five_traits}.
 \end{itemize}
 
-Каждая из вышеперечисленных черт включает 6 дополнительных, более конкретных аспектов, без которых понимание основных факторов было бы неполным \cite{big_five_traits}, см. рисунок~\ref{img:big-five-traits}.
+Каждая из вышеперечисленных черт включает 6 дополнительных, более конкретных аспектов, без которых понимание основных факторов было бы неполным \cite{big_five_traits} (см. рисунок~\ref{img:big-five-traits}).
 
 \includeimage
 {big-five-traits} % Имя файла без расширения (файл должен быть расположен в директории inc/img/)
@@ -27,4 +83,81 @@
 {1\textwidth} % Ширина рисунка
 {Структура большой пятерки} % Подпись рисунка
 
-Существует множество способов измерения Большой пятерки. Наиболее популярным является коммерческий опросник NEO PI-R, состоящий из 240 вопросов. Существуют также свободно доступные аналоги этого теста, такие так IPIP-NEO-300 (300 вопросов) и IPIP-NEO-120 (120 вопросов). Один из последних методов измерения большой пятерки является BFI-2, разработанная Оливером Джоном и Кристофером Сото в 2015 году \cite{big_five_inventory}.
+Существует множество способов измерения Большой пятерки. 
+Наиболее популярным является коммерческий опросник NEO PI-R, состоящий из 240 вопросов. 
+Существуют также свободно доступные аналоги этого теста, такие так IPIP-NEO-300 (300 вопросов) и IPIP-NEO-120 (120 вопросов). Один из последних методов измерения большой пятерки является BFI-2, разработанная Оливером Джоном и Кристофером Сото в 2015 году \cite{big_five_inventory}.
+
+\section{Типология Майерс-Бриггс}
+
+\textbf{Myers--Briggs Type Indicator (MBTI)} --- это психологическая типология личности, разработанная Изабель Бриггс Майерс и ее матерью Кэтрин как дополнение типологии Карла Юнга.
+
+MBTI широко используется в сфере личностного развития, управления персоналом, образования и командного взаимодействия.
+
+Главная идея MBTI заключается в том, что любой вид человеческой личности можно описать используя один из 16 типов. В основе этого лежат 4 характеристики, каждая из которых имеет 2 противоположности \cite{Pittenger1993MeasuringMBTI}: 
+
+\begin{enumerate}
+	\item \textbf{Экстраверсия (E) --- Интроверсия (I)} --- показывает, откуда человек получает энергию. Экстраверты направлены на внешний мир --- им комфортно в общении, они заряжаются энергией от взаимодействия с другими. Интроверты же сосредоточены на внутреннем мире мыслей и ощущений, предпочитают одиночество и более глубокие размышления.
+	
+	\item \textbf{Сенсорика (S) --- Интуиция (N)} --- определяет, как человек воспринимает информацию. Сенсорики фокусируются на конкретных фактах, деталях и реальности настоящего момента. Интуиты обращают внимание на связи, возможности и смыслы, предпочитая абстрактное мышление и прогнозирование.
+	
+	\item \textbf{Мышление (T) --- Чувство (F)} --- описывает, каким образом человек принимает решения. Тип \textbf{T} руководствуется логикой, объективными критериями и рациональным анализом. Тип \textbf{F} ориентируется на ценности, эмоции и влияние решений на других людей.
+	
+	\item \textbf{Суждение (J) --- Восприятие (P)} --- характеризует отношение к структуре и планированию. Люди с предпочтением \textbf{J} стремятся к организованности, планам и завершённости. Люди с предпочтением \textbf{P} гибки, открыты к новым возможностям и чаще импровизируют.
+\end{enumerate}
+
+Комбинация четырёх харатеристик образует 16 типов личности, например: {INTJ, ENFP, ISFJ, ESTP} и т.д.  
+Каждый тип представляет уникальный способ восприятия, мышления и взаимодействия с миром.
+
+Например:
+
+\begin{itemize}
+	\item \textbf{INTJ} — стратег, склонный к анализу и планированию, предпочитающий независимость и долгосрочные цели.
+	\item \textbf{ENFP} — энтузиаст, вдохновляющий других, гибкий и креативный в общении и идеях.
+	\item \textbf{ISTJ} — надёжный и системный исполнитель, ценящий порядок и ответственность.
+\end{itemize}
+
+\begin{table}[!h]
+	\begin{center}
+		\small
+		\begin{threeparttable}
+			\caption{Сравнение подходов к описанию персональных черт}
+			\label{tbl:exist_sol}
+			\begin{tabular}{|p{5cm}|c|c|c|c|c|}
+				\hline
+				Критерий сравнения & Оллпорт & Айзенк & Кэттел & \makecell{Большая \\ пятёрка} & MBTI   \\
+				\hline
+				Применимость в моделировании поведения & - & - & - & + & - \\ 
+				\hline
+				Надёжность & Высокая & Высокая & Средняя & Высокая & Низкая \\ 
+				\hline
+				Вариативность моделируемых личностей & Высокая & Высокая & Высокая & Высокая & \makecell{Ограничена \\ 16 типами} \\ 
+				\hline
+				Наличие теста или опросника для определения типа личности & - & + & + & + & + \\
+				\hline
+			\end{tabular}
+		\end{threeparttable}			
+	\end{center}
+\end{table}
+
+Все подходы к описанию личностных черт, за исключением MBTI, позволяют описать произвольное число личностей (персонажей) на основе варьирования значений конкретных параметров. Так, конкретная черта (параметр модели) может быть задана как бинарная, тернарная (значения: низкое, среднее, высокое), на основе иной шкалы (например, с 7 делениями~\cite{}), на основе соотношения вклада черт в характер (пример: 10~\% той-то черты, ...соотношение, можно со ссылкой). %это отчет о какой-то строке таблицы
+
+
+% обобщить обзор решений, применяющих конкретные подходы к описанию персональных черт (ПОПЧ) в виде таблице решения x подходы. Это ещё и классификация рассмотренных решений (программ, роботов, статей, описывающих исследования о моделировании поведения с учетом персональных черт) по ПОПЧ (например, в статье с Kismet-подобной головой явно применен подход на основе описанных И.Павловым свойств нервной системы: амплитуда реакций, сила реакций)
+
+Если бы это было деревом, было бы так:
+- На основе фундаментальных свойств нервной системы (на основе типологии Павлова)
+- На основе сочетания черт, выделенных психологами
+-- Большая пятёрка черт, Олпорт, Айзенк*
+% БПЧ сама по себе (агрегированный, гибридный подход)
+% Олпорт
+% Айзенк
+-- Кэттел
+- (Иное) Недетерминированный (статистический?? но статистика может быт ьв разных подходах, вопрос лишь в наличии/отсутствии блока принятия решений непосредственно перед использованием статистических данных) подход на основе воспроизведения конкретных элементов поведения на основе статистических данных об их использовании конкретным прототипом персонажа: "персонажи" Алисы (голос + типовые фразы в некотором кол-ве --- они м.б. предварительно записаны диктором, а затем воспроизведены или сымитированы), дипфейки сюда же
+%"недетерминированное": чаще всего нет закона в программе, который бы описывал целеориентированное и/или обусловленное влиянием персональных черт поведение (а не просто в виде правила if (вход = <шаблон в навыке навигатора Алисы>) then <вывести фразу спортивного комментатора>)
+% Применимость есть для воспроизведения речевых паттернов, свойственных какому-то персонажу (присказки "-дон", "пу-пу-пу", мимика и жесты - специфичное подмигивание, междометия, подкручивание усов**), но это чисто внешняя сторона процесса порождения речи, а глубинные процессы, влияющие на принятие решения о выборе той или иной стратегии (или чуть ниже уровнем - сценария) поведения, нельзя смоделировать таким образом
+
+% в презентации дерево могло бы быть хорошей визуализацией предложенной в данном НИРе классификации подходов к описанию персональных черт
+
+* Айзенк и к биологии, и к психологии
+
+** Те же элементы поведения можно выбирать на основе разных механизмов. И есть разница в том, выбран ли элемент поведения "подмигнуть" по логике "в корпусе записей реакций персонаж Х подмигиавает в среднем раз в две минуты или же по логике "будем идти по паттерну <<заговорщицкое, обозначить, что по шкале свой-чужой собеседник помещается на полюс "свой">>. Последний, детерминированный, принцип отбора стратегий/сценариев/элементов коммуникативного поведения куда с меньшей вероятностью выдаст неуместную реакцию (что так или иначе оценивается респондентами), чем "слепая" статистика в недетерминированном подходе
