--- a/nir/research/07-research.tex
+++ b/nir/research/07-research.tex
@@ -1,1 +1,40 @@
-\chapter{Исследовательский раздел}
+\chapter{Учет персональных черт}
+
+В литературе существует масса различных способов моделирования личности робота. Рассмотрим некоторые.
+
+\section{PERSONAGE}
+
+\textbf{PERSONAGE (PERSONAlity GEnerator)} --- это первая~\cite{} система генерации языка, способная параметрически моделировать черты личности <<Большой пятёрки>> в речи, прежде всего экстраверсию.
+Она строится на основе психолингвистических корреляций между языковыми особенностями и личностными чертами, описанными в психологии.
+
+Она включает следующие модули.
+
+\begin{itemize}
+	\item Content Planner --- выбирает, о чём говорить (например, положительные или отрицательные аспекты).
+	
+	\item Sentence Planner --- решает, как это сказать (структура фраз, синтаксис, вставки вроде you know).
+	
+	\item Surface Realizer --- создаёт готовую текстовую реплику.
+\end{itemize}
+
+Авторы разработали архитектуру, где каждая стадия генерации (content planning, sentence planning, realization) управляется набором из 29 параметров, связанных с экстраверсией.
+
+PERSONAGE умеет менять стиль речи под конкретную личность, сохраняя смысл и цель высказывания. Она создаёт фразы, где можно явно почувствовать <<характер>> говорящего --- от сдержанного и аналитичного до общительного и эмоционального.
+
+Система обучается на психологических данных и может генерировать рекомендации с разным уровнем <<экстравертности>> речи.
+
+
+\section{Таксономии личностей на основе набора черт}
+
+В \cite{Recchiuto2023SoftwareFramework} предлагается таксономия трех черт из <<Большой пятерки>>, а именно экстраверсия, добросовестность и доброжелательность. 
+Данная модель синтетических личностей на основе трёх независимых психологических измерений, где личность представлена как вектор в трёхмерном пространстве: % (формула \ref{equ:personality}):
+
+\begin{equation}
+	\label{equ:personality}
+	Personality = W_eE + W_aA + W_cC, 
+\end{equation}
+
+где $E$, $A$ и $C$ соответствуют векторам трёх осей: экстраверсии, доброжелательности и сознательности. 
+$W_e$, $W_a$ и $W_c$ — это длины трёх одномерных векторов, которые показывают, насколько выражена конкретная черта (в диапазоне [-1,1], где 0 означает нейтральность \cite{Nardelli2025EmpatheticCompanions})
+
+Это позволяет описывать не фиксированные типы, а <<бесконечное множество вариаций личностей>>~\cite{}, моделируя их как линейную комбинацию трёх базовых черт.
