--- a/nir/research/biblio.bib
+++ b/nir/research/biblio.bib
@@ -139,3 +139,40 @@
 	title="Опросник Большой пятерки, BFI-2 [Электронный ресурс].",
 	howpublished="Режим доступа: \url{https://psytests.org/big5/bfiB.html} (дата обращения: 09.10.2025)."
 }
+
+@inproceedings{Recchiuto2023SoftwareFramework,
+	author    = {Carmine Tommaso Recchiuto and Antonio Sgorbissa and Alice Nardelli},
+	title     = {A Software Framework to Encode the Psychological Dimensions of an Artificial Agent},
+	booktitle = {2023 32nd IEEE International Conference on Robot and Human Interactive Communication (RO-MAN)},
+	year      = {2023},
+	pages     = {1711--1718},  % примерные страницы
+	doi       = {10.1109/RO-MAN57019.2023.10309641}
+}
+
+@inproceedings{Nardelli2025EmpatheticCompanions,
+	author    = {Alice Nardelli and Antonio Sgorbissa and Carmine Tommaso Recchiuto},
+	title     = {Designing Empathetic Companions: Exploring Personality, Emotion, and Trust in Social Robots},
+	booktitle = {Proceedings of the 34th IEEE International Conference on Robot and Human Interactive Communication (RO-MAN 2025)},
+	year      = {2025},
+	publisher = {IEEE},
+	note      = {Available at \url{https://arxiv.org/abs/2504.13964}}
+}
+
+@book{PervinJohn2001Personality,
+	author    = {Lawrence A. Pervin and Oliver P. John},
+	title     = {Personality: Theory and Research},
+	edition   = {8th},
+	year      = {2001},
+	publisher = {John Wiley \& Sons},
+	address   = {New York}
+}
+
+@inproceedings{Pittenger1993MeasuringMBTI,
+	author    = {David J. Pittenger},
+	title     = {Measuring the MBTI... And Coming Up Short},
+	booktitle = {Proceedings of the Journal of Career Planning and Placement Symposium},
+	year      = {1993},
+	pages     = {48--52},
+	publisher = {American College Personnel Association},
+	note      = {Available at \url{https://www.researchgate.net/publication/237675975_Measuring_the_MBTI_and_coming_up_short}}
+}
