--- a/model/labs/labs_2025/lab_03/report/05-design.tex
+++ b/model/labs/labs_2025/lab_03/report/05-design.tex
@@ -1,15 +1,82 @@
-\chapter{Марковский процесс}
+\chapter{Равномерное распределение}
 
-Для математического описания функционирования устройств, развивающихся в форме случайного процесса, может быть применен математический аппарат, разработанный в теории вероятностей для марковских случайных процессов.
-Случайный процесс, протекающий в некоторой системе, называется \textit{Марковским}, если для каждого момента времени вероятность любого состояния системы в будущем зависит только от состояния системы в настоящем и не зависит от того, когда и каким образом система пришла в это состояние.
-В реальности таких систем не существует.
+Говорят, что непрерывная случайная величина $X$ имеет \textit{равномерное распределение} на отрезке~$[a,~b]$, если ее функция плотности распределения~$f(x)$ равна:
 
-В марковском случайном процессе будущее развитие зависит только от настоящего состояния и не зависит от предыстории процесса.
-Для марковского случайного процесса составляют уравнения Колмогорова, представляющие собой соотношения следующего вида:
 \begin{equation}
-	F(P'(t), P(t), \lambda) = 0,
+	f(x) =
+	\begin{cases}
+		\displaystyle\frac{1}{b - a}, & x \in [a, b];\\
+		0,  & \quad \text{иначе}.
+	\end{cases}
 \end{equation}
 
-где $P(t)$ --- вероятность нахождения в состоянии для сложной системы,
-$\lambda$ --- некоторый набор коэффициентов, показывающий, с какой скоростью система переходит из одного состояния в другое (интенсивность).
+При этом функция распределения~$F(x)$ равна:
 
+\begin{equation}
+	F(x) =
+	\begin{cases}
+		0,  & \quad x < a;\\
+		\displaystyle\frac{x - a}{b - a}, & x \in [a, b];\\
+		1,  & \quad x > b.
+	\end{cases}
+\end{equation}
+
+Обозначение: $X \sim R[a, b]$.
+
+\chapter{Распределение Пуассона}
+
+Говорят, что  дискретная случайная величина $X$ имеет \textit{распределение Пуассона} с параметром $\lambda > 0$, если $X$ принимает значения $0, 1, 2, \dots$ с вероятностями:
+
+\begin{equation}
+	P\{X=k\} = \frac{\lambda^k}{k!} e^{-\lambda}, k \in \mathbb{N}_0.
+\end{equation}
+
+Функция распределения: 
+
+\begin{equation}
+	F(x) = \sum\limits_{i = 0}^{x} \frac{\lambda^i}{i!} e^{-\lambda}
+\end{equation}
+
+
+Обозначение: $X \sim \Pi(\lambda)$.
+
+
+\chapter{Экспоненциальное распределение}
+
+Говорят, что  непрерывная случайная величина $X$ имеет \textit{экспоненциальное (показательное) распределение} с параметром $\lambda > 0$, если ее функция плотности распределения~$f(x)$ имеет вид:
+
+\begin{equation}
+	f(x) =
+	\begin{cases}
+		\lambda \exp(-\lambda x), & x \ge 0;\\
+		0,  & \text{иначе}.
+	\end{cases}
+\end{equation}
+
+Функция распределения: 
+
+\begin{equation}
+	F(x) = 
+	\begin{cases}
+		1 - \exp(-\lambda x), & x > 0;\\
+		0,  & \text{иначе}.
+	\end{cases}
+\end{equation}
+
+Обозначение: $X \sim \mathrm{Exp}(\lambda)$.
+
+\chapter{Нормальное распределение}
+
+Говорят, что  непрерывная случайная величина $X$ имеет \textit{нормальное распределение} с параметром $\mu$ и $\sigma^2$, если ее функция плотности распределения~$f(x)$ имеет вид:
+
+\begin{equation}
+	f(x) = \frac{1}{\sqrt{2\pi} \sigma} \exp\Bigg( -\frac{(x - \mu)^2}{2\sigma^2} \Bigg), \space x \in \mathbb{R}_0
+\end{equation}
+
+Функция распределения: 
+
+\begin{equation}
+	F(x) = \frac{1}{\sigma \sqrt{2\pi}} \int_{-\infty}^{x} e^{ -\frac{(t - \mu)^2}{2\sigma^2} } \, dt
+\end{equation}
+
+Обозначение: $X \sim \mathrm{N}(\mu, \sigma^2)$.
