--- a/model/labs/labs_2025/lab_03/report/06-implementation.tex
+++ b/model/labs/labs_2025/lab_03/report/06-implementation.tex
@@ -1,12 +1,20 @@
-\chapter{Время нахождения системы в каждом из состояний при установившемся режиме работы}
+\chapter{Распределение Пуассона}
 
-Время нахождения системы в состоянии $S_i$ при установившемся режиме работы определяется по формуле \ref{equ:stable-time}:
+Говорят, что случайная величина $X$ имеет \textit{распределение Пуассона} с параметром $\lambda > 0$, если $X$ принимает значения $0, 1, 2, \dots$ с вероятностями:
 
 \begin{equation}
-	\label{equ:stable-time}
-	t_i = \frac{P_i}{ \sum_{i=1}^{n} \lambda_{ij} + \sum_{j=1}^{n} \lambda_{ij}}
+	P\{X=k\} = \frac{\lambda^k}{k!} e^{-\lambda}, k \in \mathbb{R}_0.
 \end{equation}
 
-где $P_i$ --- вероятность нахождения в состоянии $S_i$ при установившемся режиме работы,
-$\sum_{i=1}^{n} \lambda_{ij}$ --- сумма входящих в состояние $S_i$ интенсивностей, 
-$\sum_{j=1}^{n} \lambda_{ij}$ --- сумма выходящих из состояния $S_i$ интенсивностей.
+При этом функция распределения~$F(x)$ равна:
+
+\begin{equation}
+	F(x) =
+	\begin{cases}
+		0,  & \quad x < a;\\
+		\displaystyle\frac{x - a}{b - a}, & x \in [a, b];\\
+		1,  & \quad x > b.
+	\end{cases}
+\end{equation}
+
+Обозначение: $X \sim R[a, b]$.
