--- a/model/labs/labs_2025/lab_03/report/report.tex
+++ b/model/labs/labs_2025/lab_03/report/report.tex
@@ -10,9 +10,9 @@
 {Информатика и системы управления} % Название факультета
 {Программное обеспечение ЭВМ и информационные технологии}
 % Название кафедры
-{лабораторной работа №2} % Название работы (в дат. падеже)
+{лабораторной работа №3} % Название работы (в дат. падеже)
 {Моделирование} % Название курса (необязательный аргумент)
-{Марковские процессы} % Тема работы
+{Функции распределения и плотности распределения} % Тема работы
 {} % Номер варианта (необязательный аргумент)
 {Лысцев~Н.~Д./ИУ7-73Б} % Номер группы
 {Рудаков~И.~В.} % ФИО студента
@@ -23,7 +23,7 @@
 %\include{03-introduction}
 \include{04-analysis}
 \include{05-design}
-\include{06-implementation}
+%\include{06-implementation}
 %\include{07-research}
 %\include{08-conclusion}
 
