--- a/model/labs/labs_2025/lab_03/report/05-design.tex
+++ b/model/labs/labs_2025/lab_03/report/05-design.tex
@@ -1,3 +1,5 @@
+% посмотреть как можно редактировать интервалы вывода графиков в зависимости от закона распределения
+
 \chapter{Равномерное распределение}
 
 Говорят, что непрерывная случайная величина $X$ имеет \textit{равномерное распределение} на отрезке~$[a,~b]$, если ее функция плотности распределения~$f(x)$ равна:
@@ -23,7 +25,41 @@
 
 Обозначение: $X \sim R[a, b]$.
 
-\chapter{Распределение Пуассона}
+\chapter{Распределение Эрланга} % проверил
+
+Говорят, что непрерывная случайная величина $X$ имеет \textit{распределения Эрланга} c параметрами $\lambda$ и $k$ ($(\lambda > 0; k = 0, 1, 2, ...)$, $x \geqslant 0$) если ее плотность распределения~$f_k(x)$ равна:
+
+\begin{equation}
+	\begin{aligned}
+		f_k(x) = \frac{\lambda^{k} \cdot x^{k-1}}{(k-1)!} \cdot e^{-\lambda \cdot x}.
+	\end{aligned}
+\end{equation}
+
+При этом функция распределения~$F_k(x)$ равна:
+
+\begin{equation}
+	\begin{aligned}
+		F_k(x) = 1 - e^{-\lambda \cdot x} \cdot \sum_{i = 0}^{k-1} \frac{(\lambda \cdot x)^i}{i!}.
+	\end{aligned}
+\end{equation}
+
+\textbf{Физический смысл распределения} --- вероятность того, что в пуассоновском процессе $k$-e событие произойдёт через заданный промежуток времени.
+
+\textbf{Физический смысл параметров:}
+
+\begin{itemize}
+	\item  $\lambda$ --- среднее количество событий за фиксированный промежуток времени (интенсивность);
+	
+	\item $k$ --- количество событий.
+\end{itemize}
+
+% распределение Эрланга — это распределение суммы k независимых экспоненциально распределённых величин.
+
+% иначе говоря, это распределение времени до k-го события пуассоновского процесса с интенсивностью λ. 
+
+% распределения Эрланга и Пуассона дополняют друг друга: в то время как распределение Пуассона подсчитывает события, происходящие за фиксированный промежуток времени, распределение Эрланга подсчитывает время до наступления фиксированного количества событий. При k = 1 распределение упрощается до экспоненциального распределения.
+
+\chapter{Распределение Пуассона} % проверил
 
 Говорят, что  дискретная случайная величина $X$ имеет \textit{распределение Пуассона} с параметром $\lambda > 0$, если $X$ принимает значения $0, 1, 2, \dots$ с вероятностями:
 
@@ -37,11 +73,22 @@
 	F(x) = \sum\limits_{i = 0}^{x} \frac{\lambda^i}{i!} e^{-\lambda}
 \end{equation}
 
+\textbf{Физический смысл распределения} --- вероятность наступления заданного числа событий, произошедших за фиксированное время, при условии, что данные события происходят с некоторой фиксированной средней интенсивностью и независимо друг от друга.
+
+\textbf{Физический смысл параметра $\lambda$} --- среднее количество событий за фиксированный промежуток времени (интенсивность).
+
+% 3 критерия: события независимы, среднее количество событий в единицу времени постоянно, события не происходят одновременно
+
+% это закон редких событий: наблюдаем события, которые редки сами по себе (например, звонок отдельного человека в колл-центр), но когда мы наблюдаем большое число таких событий (например, сидя в колл-центре). Количество звонков получается своего рода сумма большого количества редких событий
+
+% lambda --- произведение вероятности того, что в единицу времени (мб минуту, секунду) произойдет событие на общую длину временного интервала [так как события независимы].
+
+% пример использования: например известно, сколько раз в месяц в среднем падает сайт. Это lambda. Чтобы посчитать, с какой вероятностью сайт не упадет ни разу за месяц (k = 0), нужно использовать формулу распределения Пуассона.
 
 Обозначение: $X \sim \Pi(\lambda)$.
 
 
-\chapter{Экспоненциальное распределение}
+\chapter{Экспоненциальное распределение} % проверил
 
 Говорят, что  непрерывная случайная величина $X$ имеет \textit{экспоненциальное (показательное) распределение} с параметром $\lambda > 0$, если ее функция плотности распределения~$f(x)$ имеет вид:
 
@@ -63,6 +110,18 @@
 	\end{cases}
 \end{equation}
 
+\textbf{Физический смысл распределения} --- вероятность того, что в пуассоновском процессе следующее событие произойдёт через заданный промежуток времени.
+
+\textbf{Физический смысл параметра $\lambda$} --- среднее количество событий за фиксированный промежуток времени (интенсивность).
+
+% критерии: события независимы
+
+% экспоненциальное распределение моделирует время или расстояние между событиями в пуассоновском процессе.
+
+% это распределение моделирует время между двумя последовательными свершениями одного и того же события.
+
+% lambda --- произведение вероятности того, что в единицу времени (мб минуту, секунду) произойдет событие на общую длину временного интервала [так как события независимы].
+
 Обозначение: $X \sim \mathrm{Exp}(\lambda)$.
 
 \chapter{Нормальное распределение}
@@ -78,5 +137,13 @@
 \begin{equation}
 	F(x) = \frac{1}{\sigma \sqrt{2\pi}} \int_{-\infty}^{x} e^{ -\frac{(t - \mu)^2}{2\sigma^2} } \, dt
 \end{equation}
+
+\textbf{Геометрический смысл параметров:}
+
+\begin{itemize}
+	\item  $\mu$ --- отвечает за локализацию точки максимума функции $f(x)$ (и оси симметрии);
+	
+	\item $\sigma$ --- отвечает за концентрацию значений в районе точки $X=\mu$. Чем меньше $\sigma$, тем выше концентрация.
+\end{itemize}
 
 Обозначение: $X \sim \mathrm{N}(\mu, \sigma^2)$.
