--- a/model/labs/labs_2025/lab_03/report/05-design.tex
+++ b/model/labs/labs_2025/lab_03/report/05-design.tex
@@ -2,7 +2,7 @@
 
 \chapter{Равномерное распределение}
 
-Говорят, что непрерывная случайная величина $X$ имеет \textit{равномерное распределение} на отрезке~$[a,~b]$, если ее функция плотности распределения~$f(x)$ равна:
+Говорят, что непрерывная случайная величина $X$ имеет \textit{равномерное распределение} на отрезке~$[a,~b]$ ($a, b \in (-\infty, +\infty)$) , если ее функция плотности распределения~$f(x)$ равна:
 
 \begin{equation}
 	f(x) =
@@ -25,22 +25,39 @@
 
 Обозначение: $X \sim R[a, b]$.
 
-\chapter{Распределение Эрланга} % проверил
-
-Говорят, что непрерывная случайная величина $X$ имеет \textit{распределения Эрланга} c параметрами $\lambda$ и $k$ ($(\lambda > 0; k = 0, 1, 2, ...)$, $x \geqslant 0$) если ее плотность распределения~$f_k(x)$ равна:
+Математическое ожидание:
 
 \begin{equation}
-	\begin{aligned}
-		f_k(x) = \frac{\lambda^{k} \cdot x^{k-1}}{(k-1)!} \cdot e^{-\lambda \cdot x}.
-	\end{aligned}
+	M[X] = \frac{a + b}{2}
 \end{equation}
+
+Дисперсия: 
+
+\begin{equation}
+	D[X] = \frac{(b - 2)^2}{12}
+\end{equation}
+
+\chapter{Распределение Эрланга} % проверил
+
+Говорят, что непрерывная случайная величина $X$ имеет \textit{распределения Эрланга} c параметрами $\lambda$ и $k$ ($\lambda > 0; k = 0, 1, 2, ...$) если ее плотность распределения~$f_k(x)$ равна:
+
+\begin{equation}
+	f_k(x) =
+	\begin{cases}
+		 \frac{\lambda^{k} \cdot x^{k-1}}{(k-1)!} \cdot e^{-\lambda \cdot x}, & x \ge 0;\\
+		 0,  & \text{иначе}.
+	\end{cases}
+\end{equation}
+
 
 При этом функция распределения~$F_k(x)$ равна:
 
 \begin{equation}
-	\begin{aligned}
-		F_k(x) = 1 - e^{-\lambda \cdot x} \cdot \sum_{i = 0}^{k-1} \frac{(\lambda \cdot x)^i}{i!}.
-	\end{aligned}
+	F_k(x) =
+	\begin{cases}
+		 1 - e^{-\lambda \cdot x} \cdot \sum_{i = 0}^{k-1} \frac{(\lambda \cdot x)^i}{i!}, & x \ge 0;\\
+		 0,  & \text{иначе}.
+	\end{cases}
 \end{equation}
 
 \textbf{Физический смысл распределения} --- вероятность того, что в пуассоновском процессе $k$-e событие произойдёт через заданный промежуток времени.
@@ -58,6 +75,18 @@
 % иначе говоря, это распределение времени до k-го события пуассоновского процесса с интенсивностью λ. 
 
 % распределения Эрланга и Пуассона дополняют друг друга: в то время как распределение Пуассона подсчитывает события, происходящие за фиксированный промежуток времени, распределение Эрланга подсчитывает время до наступления фиксированного количества событий. При k = 1 распределение упрощается до экспоненциального распределения.
+
+Математическое ожидание:
+
+\begin{equation}
+	M[X] = \frac{k}{\lambda}
+\end{equation}
+
+Дисперсия: 
+
+\begin{equation}
+	D[X] = \frac{k}{\lambda^2}
+\end{equation}
 
 \chapter{Распределение Пуассона} % проверил
 
@@ -87,6 +116,17 @@
 
 Обозначение: $X \sim \Pi(\lambda)$.
 
+Математическое ожидание:
+
+\begin{equation}
+	M[X] = \lambda
+\end{equation}
+
+Дисперсия: 
+
+\begin{equation}
+	D[X] = \lambda
+\end{equation}
 
 \chapter{Экспоненциальное распределение} % проверил
 
@@ -124,6 +164,18 @@
 
 Обозначение: $X \sim \mathrm{Exp}(\lambda)$.
 
+Математическое ожидание:
+
+\begin{equation}
+	M[X] = \frac{1}{\lambda}
+\end{equation}
+
+Дисперсия: 
+
+\begin{equation}
+	D[X] = \frac{1}{\lambda^2}
+\end{equation}
+
 \chapter{Нормальное распределение}
 
 Говорят, что  непрерывная случайная величина $X$ имеет \textit{нормальное распределение} с параметром $\mu$ и $\sigma^2$, если ее функция плотности распределения~$f(x)$ имеет вид:
@@ -147,3 +199,15 @@
 \end{itemize}
 
 Обозначение: $X \sim \mathrm{N}(\mu, \sigma^2)$.
+
+Математическое ожидание:
+
+\begin{equation}
+	M[X] = \mu
+\end{equation}
+
+Дисперсия: 
+
+\begin{equation}
+	D[X] = \sigma^2
+\end{equation}
